# bazel-dotnet-core

./: .bazelrc  .gitignore  BUILD.bazel  Friends.sln  README.md  WORKSPACE  bazel-bin  bazel-out  bazel-testlogs  package.json  tsconfig.json
Api/: ApiController.cs  BUILD.bazel  Program.cs  Startup.cs
Friends/: BUILD.bazel  FriendsController.cs  HomeController.cs  Program.cs  Startup.cs  index.html  site.css
Friends/Client/: BUILD.bazel  app.component.html  app.component.ts  app.module.ts  app.routes.ts
Friends/Client/AddressBook/: BUILD.bazel  address-book-service.ts  address-book-title-service.ts  address-book.html  address-book.module.ts  address-book.ts
Friends/Client/Shared/: BUILD.bazel
Friends/Client/Survey/: BUILD.bazel  survey.module.ts  survey.ts
Friends/Client/Treeview/: BUILD.bazel  directory.ts  treeview-demo.ts  treeview.module.ts  treeview.ts
Model/: BUILD.bazel  Friend.cs
