package(default_visibility = ["//visibility:public"])

load("@npm_angular_bazel//:index.bzl", "ng_module")

ng_module(
    name = "src",
    srcs = glob(["*.ts"]),
    tsconfig = "//:tsconfig.json",
    assets = ["address-book.html"],
    deps = [
            "@npm//rxjs",
            "//Friends/Client/Shared",
            "@npm//@angular/core",
            "@npm//@angular/common",
            "@npm//@angular/forms",
    ]
)