package(default_visibility = ["//visibility:public"])

load("@npm_angular_bazel//:index.bzl", "ng_module")

ng_module(
    name = "src",
    srcs = glob(["*.ts"]),
    tsconfig = "//:tsconfig.json",
    deps = [
            "//Friends/Client/Shared",
            "@npm//@angular/core",
            "@npm//@angular/router",
            "@npm//@angular/forms",
    ]
)